REG-2369: Support clerical editing of UBRN
