# src/it/scala/uk/gov/ons/br/paye/controllers/PayeEditControllerRoutingSpec.scala
@@ -8,11 +8,10 @@ import play.api.Application
 import play.api.inject.guice.GuiceApplicationBuilder
 import play.api.test.FakeRequest
 import play.api.test.Helpers.{route, _}
-import play.mvc.Http.HttpVerbs.GET
-import uk.gov.ons.br.models.Address
-import uk.gov.ons.br.paye.controllers.PayeQueryControllerRoutingSpec.SamplePayeUnit
-import uk.gov.ons.br.paye.models.{Paye, PayeRef}
-import uk.gov.ons.br.repository.QueryRepository
+import uk.gov.ons.br.parsers.JsonPatchBodyParser.JsonPatchMediaType
+import uk.gov.ons.br.paye.models.PayeRef
+import uk.gov.ons.br.services.PatchService
+import uk.gov.ons.br.services.PatchService.PatchApplied
 import uk.gov.ons.br.test.UnitSpec
 
 import scala.concurrent.Future
@@ -20,23 +19,22 @@ import scala.concurrent.Future
 /*
  * We are relying on the Play Router to perform request parameter validation for us (in accordance with regex
  * constraints specified in the routes file).
- * This spec tests that the Router is configured correctly for Paye queries.
+ * This spec tests that the Router is configured correctly for Paye clerical edits.
  *
  * NOTE: MockFactory needs to be the right-most trait to avoid 'assertion failed: Null expectation context -
  * missing withExpectations?' error.
  */
-class PayeQueryControllerRoutingSpec extends UnitSpec with GuiceOneAppPerTest with MockFactory {
+class PayeEditControllerRoutingSpec extends UnitSpec with GuiceOneAppPerTest with MockFactory {
   /*
-   * Stub the repository layer so that valid requests find a unit.
+   * Stub the service layer so that any patch requests that make it through to the controller are successfully applied.
    */
   override def newAppForTest(testData: TestData): Application = {
-    val queryResult = Right(Some(SamplePayeUnit))
-    val queryRepository = stub[QueryRepository[PayeRef, Paye]]
-    (queryRepository.queryByUnitReference _).when(*).returns(Future.successful(queryResult))
+    val patchService = stub[PatchService[PayeRef]]
+    (patchService.applyPatchTo _).when(*, *).returns(Future.successful(PatchApplied))
 
     val fakeModule = new AbstractModule {
       override def configure(): Unit = {
-        bind(new TypeLiteral[QueryRepository[PayeRef, Paye]]() {}).toInstance(queryRepository)
+        bind(new TypeLiteral[PatchService[PayeRef]]() {}).toInstance(patchService)
         ()
       }
     }
@@ -48,11 +46,13 @@ class PayeQueryControllerRoutingSpec extends UnitSpec with GuiceOneAppPerTest wi
     val ValidMinLengthPayeRef = "125H"
     val ValidMaxLengthPayeRef = "125H7A716207"
 
-    def fakeRequestTo(uri: String) =
-      FakeRequest(method = GET, path = uri)
+    def fakeRequestTo(uri: String): FakeRequest[String] =
+      FakeRequest(method = PATCH, path = uri).
+        withHeaders(CONTENT_TYPE -> JsonPatchMediaType).
+        withBody("""[{"op": "test", "path": "/links/ubrn", "value": "old-ubrn"}]""")
   }
 
-  "A request to query a PAYE admin unit by PAYE reference" - {
+  "A request to clerically edit a PAYE admin unit by PAYE reference" - {
     "is rejected when" - {
       "the target PAYE reference comprises fewer than 4 characters" in new Fixture {
         val result = route(app, fakeRequestTo(s"/v1/paye/${ValidMinLengthPayeRef.drop(1)}"))
@@ -77,38 +77,14 @@ class PayeQueryControllerRoutingSpec extends UnitSpec with GuiceOneAppPerTest wi
       "the target PAYE reference comprises 4 alphanumeric characters" in new Fixture {
         val result = route(app, fakeRequestTo(s"/v1/paye/$ValidMinLengthPayeRef"))
 
-        status(result.value) shouldBe OK
+        status(result.value) shouldBe NO_CONTENT
       }
 
       "the target PAYE reference comprises 12 alphanumeric characters" in new Fixture {
         val result = route(app, fakeRequestTo(s"/v1/paye/$ValidMaxLengthPayeRef"))
 
-        status(result.value) shouldBe OK
+        status(result.value) shouldBe NO_CONTENT
       }
     }
   }
-}
-
-private object PayeQueryControllerRoutingSpec {
-  val SamplePayeUnit = Paye(
-    payeref = PayeRef("065H7Z31732"),
-    name = "some-name",
-    tradingStyle = None,
-    legalStatus = "some-legalStatus",
-    stc = None,
-    previousPayeref = None,
-    employerCategory = None,
-    actionDate = None,
-    lifespan = None,
-    jobs = None,
-    employeeSplits = None,
-    address = Address(
-      line1 = "some-line1",
-      line2 = None,
-      line3 = None,
-      line4 = None,
-      line5 = None,
-      postcode = "some-postcode"
-    ),
-    links = None)
 }
